# reviews-service

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
src/project/: celery.py  settings.py  urls.py
src/reviews/: admin.py  apps.py  filters.py  middleware.py  serializers.py  services.py  tasks.py  urls.py  utils.py  validators.py  views.py
src/reviews/migrations/: 0001_initial.py  0002_remove_category_slug_remove_product_slug_and_more.py  0003_rename_is_read_message_read_and_more.py  0004_additionalimage_deleted_bookmark_deleted_and_more.py  0005_minus_plus_remove_review_minuses_and_more.py
src/reviews/models/: __init__.py  base_models.py  models.py
src/reviews/views/: __init__.py  mixins.py  review_views.py  user_views.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py  0002_rename_last_activity_user__last_activity.py  0003_alter_user_options_alter_user_managers.py
